--- a/html.html
+++ b/html.html
@@ -4,38 +4,77 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My First Page</title>
+    <title>Stock Market Data 2019-2024</title>
 </head>
 
 <body>
 
   <!-- Header -->
-  <h1>Hello World!</h1>
+  <h1>Stock Market Data 2019-2024</h1>
 
   <!-- Image -->
-  <img src="https://2u-data-curriculum-team.s3.amazonaws.com/dataviz-classroom/v1.1/11-Web/kids_dancing_hip_hop.png" alt="children learning to dance hip-hop" />
+  <img src="https://img.freepik.com/free-vector/gradient-stock-market-concept_23-2149166910.jpg?size=626&ext=jpg" alt="stockmarket" />
   <br />
-
-  <!-- Link with New Tab -->
-  <a href="https://www.google.com" target="_blank">Opens new tab</a>
-  <br />
-
-  <!-- Bold Link -->
-  <strong><a href="https://www.youtube.com">This is a bold link</a></strong>
-  <br />
-
-  <!-- Placeholder link -->
-  <a href="#">This is placeholder link goes nowhere, for now</a>
 
   <!-- Paragraph -->
-  <p>Hello, it's me. <br />I was wondering if after all these years you'd like to meet.</p>
+  <p>Research Questions</p>
 
   <!-- Ordered List -->
   <ol>
-    <li>Item 1</li>
-    <li>Item 2</li>
-    <li>Item 3</li>
+    <li>How are the stock prices of big tech companies related to stock volume and how do these change over time?</li>
+      <ul>
+        <li>Amazon</li>
+        <li>Apple</li>
+        <li>Google</li>
+        <li>Microsoft</li>
+      </ul>
+    <li>Question 2</li>
+      <ul>
+        <li>Natural Gas</li>
+        <li>Crude Oil</li>
+      </ul>
+    <li>Question 3</li>
+      <ul>
+        <li>Gold</li>
+        <li>Silver</li>
+        <li>Ethereum</li>
+        <li>Bitcoin</li>
+      </ul>
+    <li>Question 4</li>
+      <ul>
+        <li>Tesla</li>
+        <li>Netflix</li>
+      </ul>
   </ol>
+
+    <!-- Paragraph -->
+    <p>Findings by Sector</p>
+
+  <ul>
+    <li><a href="https://www.google.com" target="_blank">Amazon</a></li>
+    <li><a href="https://www.google.com" target="_blank">Apple</a></li>
+    <li><a href="https://www.google.com" target="_blank">Bitcoin</a></li>
+    <li><a href="https://www.google.com" target="_blank">Crude Oil</a></li>
+    <li><a href="https://www.google.com" target="_blank">Ethereum</a></li>
+    <li><a href="https://www.google.com" target="_blank">Gold</a></li>
+    <li><a href="https://www.google.com" target="_blank">Google</a></li>
+    <li><a href="https://www.google.com" target="_blank">Microsoft</a></li>
+    <li><a href="https://www.google.com" target="_blank">Natural Gas</a></li>
+    <li><a href="https://www.google.com" target="_blank">Netflix</a></li>
+    <li><a href="https://www.google.com" target="_blank">Silver</a></li>
+    <li><a href="https://www.google.com" target="_blank">Tesla</a></li>
+  </ul>
+
+    <!-- Link with New Tab -->
+    <a href="file:///Users/NicoleAnderson/Documents/GitHub/Project-3/html%20copy.html" target="_blank">Opens new tab</a>
+    <br />
+  
+    <!-- Bold Link -->
+    <strong><a href="https://www.youtube.com">bold link</a></strong>
+    <br />
+  
+    <!-- Placeholder link -->
+    <a href="#">placeholder link</a>
 
 </body>
 
