--- a/Sector_htmls/Netflix.html
+++ b/Sector_htmls/Netflix.html
@@ -24,7 +24,7 @@
     <br />
   
     <!-- Bold Link -->
-    <strong><a href="https://www.youtube.com">bold link</a></strong>
+    <strong><a href="https://www.netflix.com">bold link</a></strong>
     <br />
   
     <!-- Placeholder link -->
