--- a/Sector_htmls/Amazon.html
+++ b/Sector_htmls/Amazon.html
@@ -13,7 +13,7 @@
   <h1>Amazon</h1>
 
   <!-- Image -->
-  <img src="https://" alt="stockmarket" />
+  <img src="file:///Users/NicoleAnderson/Downloads/amazon_total.png" alt="amazon" style="width: 1250px; height: 400px;"/>
   <br />
 
   <!-- Paragraph -->
