--- a/html.html
+++ b/html.html
@@ -51,7 +51,7 @@
     <p>Findings by Sector</p>
 
   <ul>
-    <li><a href="https://www.google.com" target="_blank">Amazon</a></li>
+    <li><a href="file:///Users/NicoleAnderson/Documents/GitHub/Project-3/Sector_htmls/Amazon.html" target="_blank">Amazon</a></li>
     <li><a href="https://www.google.com" target="_blank">Apple</a></li>
     <li><a href="https://www.google.com" target="_blank">Bitcoin</a></li>
     <li><a href="https://www.google.com" target="_blank">Crude Oil</a></li>
