test update gold html.html

--- a/html.html
+++ b/html.html
@@ -56,7 +56,7 @@
     <li><a href="https://www.google.com" target="_blank">Bitcoin</a></li>
     <li><a href="https://www.google.com" target="_blank">Crude Oil</a></li>
     <li><a href="https://www.google.com" target="_blank">Ethereum</a></li>
-    <li><a href="https://www.google.com" target="_blank">Gold</a></li>
+    <li><a href="file:///C:/Users/gonzh/OneDrive/Documents/Coursework%20Camp/Course/projects/project%203/hugo.html" target="_blank">Gold</a></li>
     <li><a href="https://www.google.com" target="_blank">Google</a></li>
     <li><a href="https://www.google.com" target="_blank">Microsoft</a></li>
     <li><a href="https://www.google.com" target="_blank">Natural Gas</a></li>
