--- a/html.html
+++ b/html.html
@@ -51,18 +51,18 @@
     <p>Findings by Sector</p>
 
   <ul>
-    <li><a href="file:///Users/NicoleAnderson/Documents/GitHub/Project-3/Sector_htmls/Amazon.html" target="_blank">Amazon</a></li>
-    <li><a href="https://www.google.com" target="_blank">Apple</a></li>
-    <li><a href="https://www.google.com" target="_blank">Bitcoin</a></li>
-    <li><a href="https://www.google.com" target="_blank">Crude Oil</a></li>
-    <li><a href="https://www.google.com" target="_blank">Ethereum</a></li>
-    <li><a href="file:///C:/Users/gonzh/OneDrive/Documents/Coursework%20Camp/Course/projects/project%203/hugo.html" target="_blank">Gold</a></li>
-    <li><a href="https://www.google.com" target="_blank">Google</a></li>
-    <li><a href="https://www.google.com" target="_blank">Microsoft</a></li>
-    <li><a href="https://www.google.com" target="_blank">Natural Gas</a></li>
-    <li><a href="https://www.google.com" target="_blank">Netflix</a></li>
-    <li><a href="https://www.google.com" target="_blank">Silver</a></li>
-    <li><a href="https://www.google.com" target="_blank">Tesla</a></li>
+    <li><a href="Sector_htmls/Amazon.html" target="_blank">Amazon</a></li>
+    <li><a href="Sector_htmls/Apple.html" target="_blank">Apple</a></li>
+    <li><a href="Sector_htmls/Bitcoin.html" target="_blank">Bitcoin</a></li>
+    <li><a href="Sector_htmls/Crude_Oil.html" target="_blank">Crude Oil</a></li>
+    <li><a href="Sector_htmls/Ethereum.html" target="_blank">Ethereum</a></li>
+    <li><a href="Sector_htmls/Gold.html" target="_blank">Gold</a></li>
+    <li><a href="Sector_htmls/Google.html" target="_blank">Google</a></li>
+    <li><a href="Sector_htmls/Microsoft.html" target="_blank">Microsoft</a></li>
+    <li><a href="Sector_htmls/Natural_Gas.html" target="_blank">Natural Gas</a></li>
+    <li><a href="Sector_htmls/Netflix.html" target="_blank">Netflix</a></li>
+    <li><a href="Sector_htmls/Silver.html" target="_blank">Silver</a></li>
+    <li><a href="Sector_htmls/Tesla.html" target="_blank">Tesla</a></li>
   </ul>
 
     <!-- Link with New Tab -->
