--- a/main.html
+++ b/main.html
@@ -30,8 +30,7 @@
       </ul>
     <li>Question 2</li>
       <ul>
-        <li>Natural Gas</li>
-        <li>Crude Oil</li>
+        <li>SP 500</li>
       </ul>
     <li>Question 3</li>
       <ul>
@@ -54,14 +53,13 @@
     <li><a href="Sector_htmls/Amazon.html" target="_blank">Amazon</a></li>
     <li><a href="Sector_htmls/Apple.html" target="_blank">Apple</a></li>
     <li><a href="Sector_htmls/Bitcoin.html" target="_blank">Bitcoin</a></li>
-    <li><a href="Sector_htmls/Crude_Oil.html" target="_blank">Crude Oil</a></li>
     <li><a href="Sector_htmls/Ethereum.html" target="_blank">Ethereum</a></li>
     <li><a href="Sector_htmls/Gold.html" target="_blank">Gold</a></li>
     <li><a href="Sector_htmls/Google.html" target="_blank">Google</a></li>
     <li><a href="Sector_htmls/Microsoft.html" target="_blank">Microsoft</a></li>
-    <li><a href="Sector_htmls/Natural_Gas.html" target="_blank">Natural Gas</a></li>
     <li><a href="Sector_htmls/Netflix.html" target="_blank">Netflix</a></li>
     <li><a href="Sector_htmls/Silver.html" target="_blank">Silver</a></li>
+    <li><a href="Sector_htmls/SP500.html" target="_blank">SP 500</a></li>
     <li><a href="Sector_htmls/Tesla.html" target="_blank">Tesla</a></li>
   </ul>
 
