Added sector html file and question to main html file.

--- a/main.html
+++ b/main.html
@@ -28,7 +28,7 @@
         <li>Google</li>
         <li>Microsoft</li>
       </ul>
-    <li>Question 2</li>
+    <li>How does the change in Federal Reserve interest rates affect the SP500 stock price?</li>
       <ul>
         <li>SP 500</li>
       </ul>
