--- a/Sector_htmls/Amazon.html
+++ b/Sector_htmls/Amazon.html
@@ -13,7 +13,7 @@
   <h1>Amazon</h1>
 
   <!-- Image -->
-  <img src="https://photos.google.com/photo/AF1QipN9r1nLpueF0jcudXM2pc-QHtqX3p8OUmy_lPK3" alt="amazon" style="width: 1250px; height: 400px;"/>
+  <img src="Images/amazon_total.png" alt="amazon" style="width: 1250px; height: 400px;"/>
   <br />
 
   <!-- Paragraph -->
