--- a/main.html
+++ b/main.html
@@ -5,19 +5,52 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stock Market Data 2019-2024</title>
+    <style> 
+      body { 
+        background-image: url('https://img.freepik.com/free-vector/gradient-stock-market-concept_23-2149166910.jpg?size=626&ext=jpg'); 
+        background-size: cover; 
+      } 
+    </style> 
 </head>
 
 <body>
+  <style> 
+    body { 
+      color:aliceblue
+    } 
+  </style> 
+
+<style>
+  a:link {
+    color:aliceblue;
+    background-color: transparent;
+    text-decoration: none;
+  }
+  
+  a:visited {
+    color: pink;
+    background-color: transparent;
+    text-decoration: none;
+  }
+  
+  a:hover {
+    color:aqua;
+    background-color: transparent;
+    text-decoration: underline;
+  }
+  
+  a:active {
+    color: yellow;
+    background-color: transparent;
+    text-decoration: underline;
+  }
+  </style>
 
   <!-- Header -->
   <h1>Stock Market Data 2019-2024</h1>
 
-  <!-- Image -->
-  <img src="https://img.freepik.com/free-vector/gradient-stock-market-concept_23-2149166910.jpg?size=626&ext=jpg" alt="stockmarket" />
-  <br />
-
   <!-- Paragraph -->
-  <p>Research Questions</p>
+  <strong style="font-size:2vw">Research Questions</strong>
 
   <!-- Ordered List -->
   <ol>
@@ -47,7 +80,7 @@
   </ol>
 
     <!-- Paragraph -->
-    <p>Findings by Sector</p>
+    <p style="font-size:2vw">Findings by Sector</p>
 
   <ul>
     <li><a href="Sector_htmls/Amazon.html" target="_blank">Amazon</a></li>
