--- a/main.html
+++ b/main.html
@@ -46,13 +46,11 @@
   }
   </style>
 
-  <!-- Header -->
-  <h1>Stock Market Data 2019-2024</h1>
+  <h2 align="right" style="font-size:1.2vw">Nicole Anderson, Hugo Gonzalez, Cameron Henson, Soubhadra Sarkar</h2>
+  <h1 style="font-size:3vw"><u>Stock Market Data 2019-2024</u></h1>
 
-  <!-- Paragraph -->
   <strong style="font-size:2vw">Research Questions</strong>
 
-  <!-- Ordered List -->
   <ol>
     <li>How are the stock prices of big tech companies related to stock volume and how do these change over time?</li>
       <ul>
@@ -79,8 +77,7 @@
       </ul>
   </ol>
 
-    <!-- Paragraph -->
-    <p style="font-size:2vw">Findings by Sector</p>
+    <strong style="font-size:2vw">Findings by Sector</strong>
 
   <ul>
     <li><a href="Sector_htmls/Amazon.html" target="_blank">Amazon</a></li>
@@ -95,17 +92,6 @@
     <li><a href="Sector_htmls/SP500.html" target="_blank">SP 500</a></li>
     <li><a href="Sector_htmls/Tesla.html" target="_blank">Tesla</a></li>
   </ul>
-
-    <!-- Link with New Tab -->
-    <a href="file:///Users/NicoleAnderson/Documents/GitHub/Project-3/html%20copy.html" target="_blank">Opens new tab</a>
-    <br />
-  
-    <!-- Bold Link -->
-    <strong><a href="https://www.youtube.com">bold link</a></strong>
-    <br />
-  
-    <!-- Placeholder link -->
-    <a href="#">placeholder link</a>
 
 </body>
 
