--- a/Sector_htmls/Apple.html
+++ b/Sector_htmls/Apple.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-us">
+<body style="background-color:rgb(176, 230, 180);">
 
 <head>
     <meta charset="UTF-8">
@@ -10,10 +11,43 @@
 <body>
 
   <!-- Header -->
-  <h1>Apple</h1>
+  <h1><u>Apple Stock Market Data</u></h1>
 
   <!-- Image -->
-  <img src="https://" alt="stockmarket" />
+  <p style="text-align: center">Apple Stock Price v. Volume Over Time (2019-2024)</p>
+  <div style="text-align: center;">
+    <img src="Images/apple_total.png" alt="AppleTotal" width="1200" height="400">
+  </div>
+  <br />
+
+  <p style="text-align: center">Apple Stock Price v. Volume Over Time (2019)</p>
+  <div style="text-align: center;">
+    <img src="Images/apple_2019.png" alt="Apple2019" width="1200" height="400"/>
+  </div>
+  <br />
+
+  <p style="text-align: center">Apple Stock Price v. Volume Over Time (2020)</p>
+  <div style="text-align: center;">
+    <img src="Images/apple_2020.png" alt="Apple2020" width="1200" height="400"/>
+  </div>
+  <br />
+
+  <p style="text-align: center">Apple Stock Price v. Volume Over Time (2021)</p>
+  <div style="text-align: center;">
+    <img src="Images/apple_2021.png" alt="Apple2021" width="1200" height="400"/>
+  </div>
+  <br />
+
+  <p style="text-align: center">Apple Stock Price v. Volume Over Time (2022)</p>
+  <div style="text-align: center;">
+    <img src="Images/apple_2022.png" alt="Apple2022" width="1200" height="400"/>
+  </div>
+  <br />
+
+  <p style="text-align: center">Apple Stock Price v. Volume Over Time (2023-present)</p>
+  <div style="text-align: center;">
+    <img src="Images/apple_2023.png" alt="Apple2023" width="1200" height="400"/>
+  </div>
   <br />
 
   <!-- Paragraph -->
