--- a/Sector_htmls/Microsoft.html
+++ b/Sector_htmls/Microsoft.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-us">
+<body style="background-color:rgb(251, 251, 154);"></body>
 
 <head>
     <meta charset="UTF-8">
@@ -10,14 +11,47 @@
 <body>
 
   <!-- Header -->
-  <h1>Microsoft</h1>
+  <h1><u>Microsoft Stock Market Data</u></h1>
 
   <!-- Image -->
-  <img src="https://" alt="stockmarket" />
+  <p style="text-align: center">Microsoft Stock Price v. Volume Over Time (2019-2024)</p>
+  <div style="text-align: center;">
+    <img src="Images/microsoft_total.png" alt="MicrosoftTotal" width="1200" height="400"/>
+  </div>
+  <br />
+
+  <p style="text-align: center">Microsoft Stock Price v. Volume Over Time (2019)</p>
+  <div style="text-align: center;">
+    <img src="Images/microsoft_2019.png" alt="Microsoft2019" width="1200" height="400"/>
+  </div>
+  <br />
+
+  <p style="text-align: center">Microsoft Stock Price v. Volume Over Time (2020)</p>
+  <div style="text-align: center;">
+    <img src="Images/microsoft_2020.png" alt="Microsoft2020" width="1200" height="400"/>
+  </div>
+  <br />
+
+  <p style="text-align: center">Microsoft Stock Price v. Volume Over Time (2021)</p>
+  <div style="text-align: center;">
+    <img src="Images/microsoft_2021.png" alt="Microsoft2021" width="1200" height="400"/>
+  </div>
+  <br />
+
+  <p style="text-align: center">Microsoft Stock Price v. Volume Over Time (2022)</p>
+  <div style="text-align: center;">
+    <img src="Images/microsoft_2022.png" alt="Microsoft2022" width="1200" height="400"/>
+  </div>
+  <br />
+
+  <p style="text-align: center">Microsoft Stock Price v. Volume Over Time (2023-present)</p>
+  <div style="text-align: center;">
+    <img src="Images/microsoft_2023.png" alt="Microsoft2023" width="1200" height="400"/>
+  </div>
   <br />
 
   <!-- Paragraph -->
-  <p>Research Questions</p>
+  <p >Research Questions</p>
 
     <!-- Link with New Tab -->
     <a href="file:///Users/NicoleAnderson/Documents/GitHub/Project-3/html%20copy.html" target="_blank">Opens new tab</a>
