--- a/Sector_htmls/Netflix.html
+++ b/Sector_htmls/Netflix.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-us">
+<body style="background-color:rgb(251, 251, 154);"></body>
 
 <head>
     <meta charset="UTF-8">
@@ -10,21 +11,54 @@
 <body>
 
   <!-- Header -->
-  <h1>Netflix</h1>
+  <h1><u>Netflix Stock Market Data</u></h1>
 
   <!-- Image -->
-  <img src="https://" alt="stockmarket" />
+  <p style="text-align: center">Netflix Stock Price v. Volume Over Time (2019-2024)</p>
+  <div style="text-align: center;">
+    <img src="Images/Netflixtotal.png" alt="NetflixTotal" width="1200" height="400"/>
+  </div>
+  <br />
+
+  <p style="text-align: center">Microsoft Stock Price v. Volume Over Time (2019)</p>
+  <div style="text-align: center;">
+    <img src="Images/Netflix2019.png" alt="Netflix2019" width="1200" height="400"/>
+  </div>
+  <br />
+
+  <p style="text-align: center">Microsoft Stock Price v. Volume Over Time (2020)</p>
+  <div style="text-align: center;">
+    <img src="Images/Netflix2020.png" alt="Netflix2020" width="1200" height="400"/>
+  </div>
+  <br />
+
+  <p style="text-align: center">Microsoft Stock Price v. Volume Over Time (2021)</p>
+  <div style="text-align: center;">
+    <img src="Images/Netflix2021.png" alt="Netflix2021" width="1200" height="400"/>
+  </div>
+  <br />
+
+  <p style="text-align: center">Microsoft Stock Price v. Volume Over Time (2022)</p>
+  <div style="text-align: center;">
+    <img src="Images/Netflix2022.png" alt="Netflix2022" width="1200" height="400"/>
+  </div>
+  <br />
+
+  <p style="text-align: center">Microsoft Stock Price v. Volume Over Time (2023-present)</p>
+  <div style="text-align: center;">
+    <img src="Images/Netflix2023.png" alt="Netflix2023" width="1200" height="400"/>
+  </div>
   <br />
 
   <!-- Paragraph -->
-  <p>Research Questions</p>
+  <p >Research Questions</p>
 
     <!-- Link with New Tab -->
     <a href="file:///Users/NicoleAnderson/Documents/GitHub/Project-3/html%20copy.html" target="_blank">Opens new tab</a>
     <br />
   
     <!-- Bold Link -->
-    <strong><a href="https://www.netflix.com">bold link</a></strong>
+    <strong><a href="https://www.youtube.com">bold link</a></strong>
     <br />
   
     <!-- Placeholder link -->
