--- a/main.html
+++ b/main.html
@@ -62,7 +62,7 @@
       <ul>
         <li>SP 500</li>
       </ul>
-    <li>Question 3</li>
+    <li>How do the volatilities of returns from precious metals and cryptocurrencies compare over time?</li>
       <ul>
         <li>Gold</li>
         <li>Silver</li>
