--- a/main.html
+++ b/main.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stock Market Data 2019-2024</title>
+    <title>Stock Market Data</title>
     <style> 
       body { 
         background-image: url('https://img.freepik.com/free-vector/gradient-stock-market-concept_23-2149166910.jpg?size=626&ext=jpg'); 
