--- a/Sector_htmls/Apple.html
+++ b/Sector_htmls/Apple.html
@@ -11,7 +11,10 @@
 <body>
 
   <!-- Header -->
-  <h1><u>Apple Stock Market Data</u></h1>
+  <h1><u>Apple Stock Market Data 2019-2024</u></h1>
+
+  <p >The following graphs display the Apple stock prices and trading volume over time. The <span style="color: rgb(4, 0, 255);">blue</span> bars reflect <span style="color: rgb(4, 0, 255);">volume</span>, and the <span style="color: red;">red</span> line reflects <span style="color: red;">stock price.</span></p>
+  <p >Pearson Correlation Coefficient (2019-2024): -0.469</p>
 
   <!-- Image -->
   <p style="text-align: center">Apple Stock Price v. Volume Over Time (2019-2024)</p>
@@ -20,30 +23,35 @@
   </div>
   <br />
 
+  <p >Pearson Correlation Coefficient (2019): -0.053</p>
   <p style="text-align: center">Apple Stock Price v. Volume Over Time (2019)</p>
   <div style="text-align: center;">
     <img src="Images/apple_2019.png" alt="Apple2019" width="1200" height="400"/>
   </div>
   <br />
 
+  <p >Pearson Correlation Coefficient (2020): -0.296</p>
   <p style="text-align: center">Apple Stock Price v. Volume Over Time (2020)</p>
   <div style="text-align: center;">
     <img src="Images/apple_2020.png" alt="Apple2020" width="1200" height="400"/>
   </div>
   <br />
 
+  <p >Pearson Correlation Coefficient (2021): -0.057</p>
   <p style="text-align: center">Apple Stock Price v. Volume Over Time (2021)</p>
   <div style="text-align: center;">
     <img src="Images/apple_2021.png" alt="Apple2021" width="1200" height="400"/>
   </div>
   <br />
 
+  <p >Pearson Correlation Coefficient (2022): -0.081</p>
   <p style="text-align: center">Apple Stock Price v. Volume Over Time (2022)</p>
   <div style="text-align: center;">
     <img src="Images/apple_2022.png" alt="Apple2022" width="1200" height="400"/>
   </div>
   <br />
 
+  <p >Pearson Correlation Coefficient (2023-present): -0.307</p>
   <p style="text-align: center">Apple Stock Price v. Volume Over Time (2023-present)</p>
   <div style="text-align: center;">
     <img src="Images/apple_2023.png" alt="Apple2023" width="1200" height="400"/>
