--- a/Sector_htmls/Google.html
+++ b/Sector_htmls/Google.html
@@ -11,7 +11,10 @@
 <body>
 
   <!-- Header -->
-  <h1><u>Google Stock Market Data</u></h1>
+  <h1><u>Google Stock Market Data 2019-2024</u></h1>
+
+  <p >The following graphs display the Google stock prices and trading volume over time. The <span style="color: rgb(4, 0, 255);">blue</span> bars reflect <span style="color: rgb(4, 0, 255);">volume</span>, and the <span style="color: red;">red</span> line reflects <span style="color: red;">stock price.</span></p>
+  <p >Pearson Correlation Coefficient (2019-2024): -0.147</p>
 
   <!-- Image -->
   <p style="text-align: center">Google Stock Price v. Volume Over Time (2019-2024)</p>
@@ -20,30 +23,35 @@
   </div>
   <br />
 
+  <p >Pearson Correlation Coefficient (2019): -0.113</p>
   <p style="text-align: center">Google Stock Price v. Volume Over Time (2019)</p>
   <div style="text-align: center;">
     <img src="Images/google_2019.png" alt="Google2019" width="1200" height="400"/>
   </div>
   <br />
 
+  <p >Pearson Correlation Coefficient (2020): -0.545</p>
   <p style="text-align: center">Google Stock Price v. Volume Over Time (2020)</p>
   <div style="text-align: center;">
     <img src="Images/google_2020.png" alt="Google2020" width="1200" height="400"/>
   </div>
   <br />
 
+  <p >Pearson Correlation Coefficient (2021): -0.245</p>
   <p style="text-align: center">Google Stock Price v. Volume Over Time (2021)</p>
   <div style="text-align: center;">
     <img src="Images/google_2021.png" alt="Google2021" width="1200" height="400"/>
   </div>
   <br />
 
+  <p >Pearson Correlation Coefficient (2022): 0.124</p>
   <p style="text-align: center">Google Stock Price v. Volume Over Time (2022)</p>
   <div style="text-align: center;">
     <img src="Images/google_2022.png" alt="Google2022" width="1200" height="400"/>
   </div>
   <br />
 
+  <p >Pearson Correlation Coefficient (2023-present): -0.315</p>
   <p style="text-align: center">Google Stock Price v. Volume Over Time (2023-present)</p>
   <div style="text-align: center;">
     <img src="Images/google_2023.png" alt="Google2023" width="1200" height="400"/>
