--- a/Sector_htmls/Microsoft.html
+++ b/Sector_htmls/Microsoft.html
@@ -11,7 +11,10 @@
 <body>
 
   <!-- Header -->
-  <h1><u>Microsoft Stock Market Data</u></h1>
+  <h1><u>Microsoft Stock Market Data 2019-2024</u></h1>
+
+  <p >The following graphs display the Microsoft stock prices and trading volume over time. The <span style="color: rgb(4, 0, 255);">blue</span> bars reflect <span style="color: rgb(4, 0, 255);">volume</span>, and the <span style="color: red;">red</span> line reflects <span style="color: red;">stock price.</span></p>
+  <p >Pearson Correlation Coefficient (2019-2024): -0.098</p>
 
   <!-- Image -->
   <p style="text-align: center">Microsoft Stock Price v. Volume Over Time (2019-2024)</p>
@@ -20,30 +23,35 @@
   </div>
   <br />
 
+  <p >Pearson Correlation Coefficient (2019): -0.159</p>
   <p style="text-align: center">Microsoft Stock Price v. Volume Over Time (2019)</p>
   <div style="text-align: center;">
     <img src="Images/microsoft_2019.png" alt="Microsoft2019" width="1200" height="400"/>
   </div>
   <br />
 
+  <p >Pearson Correlation Coefficient (2020): -0.546</p>
   <p style="text-align: center">Microsoft Stock Price v. Volume Over Time (2020)</p>
   <div style="text-align: center;">
     <img src="Images/microsoft_2020.png" alt="Microsoft2020" width="1200" height="400"/>
   </div>
   <br />
 
+  <p >Pearson Correlation Coefficient (2021): -0.209</p>
   <p style="text-align: center">Microsoft Stock Price v. Volume Over Time (2021)</p>
   <div style="text-align: center;">
     <img src="Images/microsoft_2021.png" alt="Microsoft2021" width="1200" height="400"/>
   </div>
   <br />
 
+  <p >Pearson Correlation Coefficient (2022): 0.147</p>
   <p style="text-align: center">Microsoft Stock Price v. Volume Over Time (2022)</p>
   <div style="text-align: center;">
     <img src="Images/microsoft_2022.png" alt="Microsoft2022" width="1200" height="400"/>
   </div>
   <br />
 
+  <p >Pearson Correlation Coefficient (2023-present): -0.185</p>
   <p style="text-align: center">Microsoft Stock Price v. Volume Over Time (2023-present)</p>
   <div style="text-align: center;">
     <img src="Images/microsoft_2023.png" alt="Microsoft2023" width="1200" height="400"/>
