--- a/Sector_htmls/Apple.html
+++ b/Sector_htmls/Apple.html
@@ -14,63 +14,57 @@
   <h1><u>Apple Stock Market Data 2019-2024</u></h1>
 
   <p >The following graphs display the Apple stock prices and trading volume over time. The <span style="color: rgb(4, 0, 255);">blue</span> bars reflect <span style="color: rgb(4, 0, 255);">volume</span>, and the <span style="color: red;">red</span> line reflects <span style="color: red;">stock price.</span></p>
-  <p >Pearson Correlation Coefficient (2019-2024): -0.469</p>
 
   <!-- Image -->
   <p style="text-align: center">Apple Stock Price v. Volume Over Time (2019-2024)</p>
   <div style="text-align: center;">
     <img src="Images/apple_total.png" alt="AppleTotal" width="1200" height="400">
   </div>
-  <br />
+<p >Pearson Correlation Coefficient (2019-2024): -0.469</p>
+<p >A negative correlation score indicates that the stock price and volume are inversely proportional. As stock price goes up, volume goes down, and vice versa. 
+  As the correlation score is halfway between 0 (no correlation) and -1 (perfect negative correlation), this relationship is not significant, but not null either.
+  Let's break it down by year.</p>
+<br />
 
-  <p >Pearson Correlation Coefficient (2019): -0.053</p>
   <p style="text-align: center">Apple Stock Price v. Volume Over Time (2019)</p>
   <div style="text-align: center;">
     <img src="Images/apple_2019.png" alt="Apple2019" width="1200" height="400"/>
   </div>
-  <br />
+  <p >Pearson Correlation Coefficient (2019): -0.053</p>
+   <br />
 
-  <p >Pearson Correlation Coefficient (2020): -0.296</p>
   <p style="text-align: center">Apple Stock Price v. Volume Over Time (2020)</p>
   <div style="text-align: center;">
     <img src="Images/apple_2020.png" alt="Apple2020" width="1200" height="400"/>
   </div>
-  <br />
+ <p >Pearson Correlation Coefficient (2020): -0.296</p>
+ <br />
 
-  <p >Pearson Correlation Coefficient (2021): -0.057</p>
   <p style="text-align: center">Apple Stock Price v. Volume Over Time (2021)</p>
   <div style="text-align: center;">
     <img src="Images/apple_2021.png" alt="Apple2021" width="1200" height="400"/>
   </div>
-  <br />
+ <p >Pearson Correlation Coefficient (2021): -0.057</p>
+   <br />
 
-  <p >Pearson Correlation Coefficient (2022): -0.081</p>
   <p style="text-align: center">Apple Stock Price v. Volume Over Time (2022)</p>
   <div style="text-align: center;">
     <img src="Images/apple_2022.png" alt="Apple2022" width="1200" height="400"/>
   </div>
-  <br />
+ <p >Pearson Correlation Coefficient (2022): -0.081</p>
+<br />
 
-  <p >Pearson Correlation Coefficient (2023-present): -0.307</p>
   <p style="text-align: center">Apple Stock Price v. Volume Over Time (2023-present)</p>
   <div style="text-align: center;">
     <img src="Images/apple_2023.png" alt="Apple2023" width="1200" height="400"/>
   </div>
-  <br />
+  <p >Pearson Correlation Coefficient (2023-present): -0.307</p>
+<br />
 
-  <!-- Paragraph -->
-  <p>Research Questions</p>
-
-    <!-- Link with New Tab -->
-    <a href="file:///Users/NicoleAnderson/Documents/GitHub/Project-3/html%20copy.html" target="_blank">Opens new tab</a>
-    <br />
-  
-    <!-- Bold Link -->
-    <strong><a href="https://www.youtube.com">bold link</a></strong>
-    <br />
-  
-    <!-- Placeholder link -->
-    <a href="#">placeholder link</a>
+  <p>Based on this data, we can come to the conclusion that the correlation between stock price and volume is too low to be 
+    applicable when trying to predict yearly trends. For future analysis, examining this relationship on a smaller scale, 
+    for example monthly, might provide a better understanding of the relationship between stock price and volume, and therefore 
+    increase this data's applicability.</p>
 
 </body>
 
