--- a/Sector_htmls/SP500.html
+++ b/Sector_htmls/SP500.html
@@ -13,7 +13,7 @@
   <h1></h1>
 
   <!-- Image -->
-  <img src="/Users/Tuna/Desktop/GitHub_Repo/Project-3/Project-3/sp500.png" alt="SP500" style="width: 1250px; height: 400px;"/>
+  <img src="Images/ch_sp500.png" alt="SP500" style="width: 1250px; height: 800px;"/>
   <br />
 
 </body>
