--- a/main.html
+++ b/main.html
@@ -69,7 +69,7 @@
         <li>Ethereum</li>
         <li>Bitcoin</li>
       </ul>
-    <li>QHow does more volume, affect buyers and shareholders and the Price of the stock?</li>
+    <li>How does more volume, affect buyers and shareholders and the Price of the stock?</li>
       <ul>
         <li>Tesla</li>
         <li>Netflix</li>
