--- a/Sector_htmls/Apple.html
+++ b/Sector_htmls/Apple.html
@@ -63,7 +63,7 @@
 
   <p>Based on this data, we can come to the conclusion that the correlation between stock price and volume is too low to be 
     applicable when trying to predict yearly trends. For future analysis, examining this relationship on a smaller scale, 
-    for example monthly, might provide a better understanding of the relationship between stock price and volume, and therefore 
+    for example monthly or using a moving average method, might provide a better understanding of the relationship between stock price and volume, and therefore 
     increase this data's applicability.</p>
 
 </body>
