--- a/Sector_htmls/Google.html
+++ b/Sector_htmls/Google.html
@@ -21,7 +21,8 @@
     <img src="Images/google_total.png" alt="GoogleTotal" width="1200" height="400"/>
   </div>
   <p >Pearson Correlation Coefficient (2019-2024): -0.147</p>
-  <p >Initial Analysis</p>
+  <p >A negative correlation score indicates that the stock price and volume are inversely proportional. As stock price goes up, volume goes down, and vice versa. 
+    The correlation score, however, is close to 0, indicating little correlation. Let's break it down by year.</p>
   <br />
 
   <p style="text-align: center">Google Stock Price v. Volume Over Time (2019)</p>
@@ -59,7 +60,10 @@
   <p >Pearson Correlation Coefficient (2023-present): -0.315</p>
   <br />
 
-  <p>Conclusion</p>
+  <p>The correlation between stock price and volume seems to fluctuate by year. The graphs show how much the relationship between price and volume changes just within a year.
+    Based on the fluctuating and low pearson correlation scores, we cannot definitely conclude the correlation between stock price and volume. Examining the relationship between the 
+    two closer, perhaps by using a moving average method, would provide more conlusive results about the flow of the stock market and when it is best to buy, sell, trade, etc.
+  </p>
 
 </body>
 
